# lmc-assembly

./: Cargo.toml  README.md  program.lmc
examples/: ascii.lmc  countdown.lmc  fibonacci.lmc  multiplication.lmc  sum.lmc
src/: lib.rs  main.rs
tests/: examples.rs
